Update 'go-glbfeyie' component image to: quay.io/rhtap_qe/go-glbfeyie:312cda1dbe25284f827d1602467b24f63469c6a4@sha256:932cfe62aa0c8d5f27e411eaf53e1f9c4c8091ad58bf2adeac2138c8c3981a01

--- a/components/go-glbfeyie/overlays/development/deployment-patch.yaml
+++ b/components/go-glbfeyie/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-glbfeyie
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-glbfeyie:312cda1dbe25284f827d1602467b24f63469c6a4@sha256:932cfe62aa0c8d5f27e411eaf53e1f9c4c8091ad58bf2adeac2138c8c3981a01
+          name: container-image
